[package]
name = "q_guard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "q-guard"
path = "src/main.rs"

[[bin]]
name = "test-agent"
path = "src/client/test_agent.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.3"

# Ethereum
ethers = { version = "2.0", features = ["abigen", "ws"] }
revm = "3.5"

# HTTP & Serialization
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Error Handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Caching & Storage
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
moka = { version = "0.12", features = ["future"] }

# Utilities
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

